--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Ion by TEMPLATED</title>
+		<title>Equiknots</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Equiknots Custom Sewing, Stitching, and Hemming" />
+		<meta name="keywords" content="equiknots, edmonton, canada, sylvia, custom, sewing, stitching, hemming, equine, therapy" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
@@ -22,60 +22,41 @@
 		</noscript>
 	</head>
 	<body id="top">
-
-		<!-- Header -->
-			<header id="header" class="skel-layers-fixed">
-				<h1><a href="#">Ion</a></h1>
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="left-sidebar.html">Left Sidebar</a></li>
-						<li><a href="right-sidebar.html">Right Sidebar</a></li>
-						<li><a href="no-sidebar.html">No Sidebar</a></li>
-						<li><a href="#" class="button special">Sign Up</a></li>
-					</ul>
-				</nav>
-			</header>
-
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h2>This is Ion</h2>
-					<p>A free responsive template by <a href="http://templated.co">TEMPLATED</a></p>
-					<ul class="actions">
-						<li><a href="#content" class="button big special">Sign Up</a></li>
-						<li><a href="#elements" class="button big alt">Learn More</a></li>
-					</ul>
+					<h2>Equiknots</h2>
+					<p>Custom Sewing, Stitching, and Hemming</a></p>
 				</div>
 			</section>
 
 		<!-- One -->
 			<section id="one" class="wrapper style1">
 				<header class="major">
-					<h2>Ipsum feugiat consequat</h2>
-					<p>Tempus adipiscing commodo ut aliquam blandit</p>
+					<h2>Handmade Quality and Craftsmanship</h2>
 				</header>
 				<div class="container">
 					<div class="row">
 						<div class="4u">
+						<!-- fa-shield fa-wrench fa-money fa-usd-->
 							<section class="special box">
-								<i class="icon fa-area-chart major"></i>
-								<h3>Justo placerat</h3>
-								<p>Eu non col commodo accumsan ante mi. Commodo consectetur sed mi adipiscing accumsan ac nunc tincidunt lobortis.</p>
+								<i class="icon fa-shield major"></i>
+								<h3>Durable</h3>
+								<p>Every order is fabricated with high quality materials.</p>
 							</section>
 						</div>
 						<div class="4u">
 							<section class="special box">
-								<i class="icon fa-refresh major"></i>
-								<h3>Blandit quis curae</h3>
-								<p>Eu non col commodo accumsan ante mi. Commodo consectetur sed mi adipiscing accumsan ac nunc tincidunt lobortis.</p>
+								<i class="icon fa-wrench major"></i>
+								<h3>Improved</h3>
+								<p>Repairs and fixes that last.</p>
 							</section>
 						</div>
 						<div class="4u">
 							<section class="special box">
-								<i class="icon fa-cog major"></i>
-								<h3>Amet sed accumsan</h3>
-								<p>Eu non col commodo accumsan ante mi. Commodo consectetur sed mi adipiscing accumsan ac nunc tincidunt lobortis.</p>
+								<i class="icon fa-money major"></i>
+								<h3>Affordable</h3>
+								<p>Competitively priced to offer the best deal.</p>
 							</section>
 						</div>
 					</div>
