Update to contact us

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="Equiknots Custom Sewing, Stitching, and Hemming" />
 		<meta name="keywords" content="equiknots, edmonton, canada, sylvia, custom, sewing, stitching, hemming, equine, therapy" />
+		<meta name="format-detection" content="telephone=no" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
@@ -27,6 +28,9 @@
 				<div class="inner">
 					<h2>Equiknots</h2>
 					<p>Custom Sewing, Stitching, and Hemming</a></p>
+					<ul class="actions">
+						<li><a href="#contact" class="button big special">Contact Us</a></li>
+					</ul>
 				</div>
 			</section>
 
@@ -99,15 +103,12 @@
 			<footer id="footer">
 				<div class="container">
 					<div class="row">
-						<div class="6u">
-							<h2>Aliquam Interdum</h2>
-							<p>Blandit nunc tempor lobortis nunc non. Mi accumsan. Justo aliquet massa adipiscing cubilia eu accumsan id. Arcu accumsan faucibus vis ultricies adipiscing ornare ut. Mi accumsan justo aliquet.</p>
+						<div id="contact" style="text-align: center;">
+							<h2>Contact Us</h2>
+							<p>For inquiries, quotes, and general questions please contact us via phone or email.</p>
 							<ul class="icons">
-								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
+								<li><a href="mailto:sylvia.church@telus.net" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+								<li><a href="tel:7809406227" class="icon fa-phone"><span class="label">Phone</span></a></li>
 							</ul>
 						</div>
 					</div>
