Updates to contact

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 							<h2>Contact Us</h2>
 							<p>For inquiries, quotes, and general questions please contact us via phone or email.</p>
 							<ul class="icons">
-								<li><a href="mailto:sylvia.church@telus.net" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-								<li><a href="tel:7809406227" class="icon fa-phone"><span class="label">Phone</span></a></li>
+								<li><a href="mailto:sylvia.church@telus.net" class="icon fa-envelope-o"><span> sylvia.church@telus.net </span></a></li>
+								<li><a href="tel:17809406227" class="icon fa-phone"><span> 1-780-940-6227 </span></a></li>
 							</ul>
 						</div>
 					</div>
