Updates to item descriptions. TODO get actual descriptions and items

--- a/index.html
+++ b/index.html
@@ -70,29 +70,23 @@
 		<!-- Two -->
 			<section id="two" class="wrapper style2">
 				<header class="major">
-					<h2>Commodo accumsan aliquam</h2>
-					<p>Amet nisi nunc lorem accumsan</p>
+					<h2>Our work</h2>
+					<p>We let our products speak for themselves. Here is a selection of our finished work.</p>
 				</header>
 				<div class="container">
 					<div class="row">
 						<div class="6u">
 							<section class="special">
-								<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
-								<h3>Mollis adipiscing nisl</h3>
-								<p>Eget mi ac magna cep lobortis faucibus accumsan enim lacinia adipiscing metus urna adipiscing cep commodo id. Ac quis arcu amet. Arcu nascetur lorem adipiscing non faucibus odio nullam arcu lobortis. Aliquet ante feugiat. Turpis aliquet ac posuere volutpat lorem arcu aliquam lorem.</p>
-								<ul class="actions">
-									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul>
+								<a class="image fit"><img src="images/pic01.jpg" alt="Blacksmith Chaps" /></a>
+								<h3>Blacksmith Chaps</h3>
+								<p>Strong and lasting, these chaps provide protection against anything being a blacksmith can throw at you.</p>
 							</section>
 						</div>
 						<div class="6u">
 							<section class="special">
-								<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-								<h3>Neque ornare adipiscing</h3>
-								<p>Eget mi ac magna cep lobortis faucibus accumsan enim lacinia adipiscing metus urna adipiscing cep commodo id. Ac quis arcu amet. Arcu nascetur lorem adipiscing non faucibus odio nullam arcu lobortis. Aliquet ante feugiat. Turpis aliquet ac posuere volutpat lorem arcu aliquam lorem.</p>
-								<ul class="actions">
-									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul>
+								<a class="image fit"><img src="images/pic02.jpg" alt="Welding Blankets" /></a>
+								<h3>Welding Blankets</h3>
+								<p>Fire resistant and durable, these blankets will protect you from the dangers of welding.</p>
 							</section>
 						</div>
 					</div>
@@ -102,15 +96,13 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
-					<div class="row">
-						<div id="contact" style="text-align: center;">
-							<h2>Contact Us</h2>
-							<p>For inquiries, quotes, and general questions please contact us via phone or email.</p>
-							<ul class="icons">
-								<li><a href="mailto:sylvia.church@telus.net" class="icon fa-envelope-o"><span> sylvia.church@telus.net </span></a></li>
-								<li><a href="tel:17809406227" class="icon fa-phone"><span> 1-780-940-6227 </span></a></li>
-							</ul>
-						</div>
+					<div id="contact" style="text-align: center;">
+						<h2>Contact Us</h2>
+						<p>For inquiries, quotes, and general questions please contact us via email or phone.</p>
+						<ul class="icons">
+							<li><a href="mailto:sylvia.church@telus.net" class="icon fa-envelope-o"><span> sylvia.church@telus.net </span></a></li>
+							<li><a href="tel:17809406227" class="icon fa-phone"><span> 1-780-940-6227 </span></a></li>
+						</ul>
 					</div>
 					<ul class="copyright">
 						<li>&copy; Equiknots. All rights reserved.</li>
