updated images and text per Kathy's request

--- a/index.html
+++ b/index.html
@@ -42,25 +42,24 @@
 				<div class="container">
 					<div class="row">
 						<div class="4u">
-						<!-- fa-shield fa-wrench fa-money fa-usd-->
 							<section class="special box">
 								<i class="icon fa-shield major"></i>
-								<h3>Durable</h3>
+								<h3>Quality Materials</h3>
 								<p>Every order is fabricated with high quality materials.</p>
 							</section>
 						</div>
 						<div class="4u">
 							<section class="special box">
 								<i class="icon fa-wrench major"></i>
-								<h3>Improved</h3>
+								<h3>Durability</h3>
 								<p>Repairs and fixes that last.</p>
 							</section>
 						</div>
 						<div class="4u">
 							<section class="special box">
 								<i class="icon fa-money major"></i>
-								<h3>Affordable</h3>
-								<p>Competitively priced to offer the best deal.</p>
+								<h3>Competitive Pricing</h3>
+								<p>Priced to offer the best deal.</p>
 							</section>
 						</div>
 					</div>
@@ -75,18 +74,22 @@
 				</header>
 				<div class="container">
 					<div class="row">
-						<div class="6u">
+						<div class="4u">
 							<section class="special">
-								<a class="image fit"><img src="images/pic01.jpg" alt="Blacksmith Chaps" /></a>
-								<h3>Blacksmith Chaps</h3>
-								<p>Strong and lasting, these chaps provide protection against anything being a blacksmith can throw at you.</p>
+								<a class="image fit"><img src="images/industrial.jpg" alt="Industrial" /></a>
+								<h3>Industrial</h3>
 							</section>
 						</div>
-						<div class="6u">
+						<div class="4u">
 							<section class="special">
-								<a class="image fit"><img src="images/pic02.jpg" alt="Welding Blankets" /></a>
-								<h3>Welding Blankets</h3>
-								<p>Fire resistant and durable, these blankets will protect you from the dangers of welding.</p>
+								<a class="image fit"><img src="images/equine.jpg" alt="Equine" /></a>
+								<h3>Equine</h3>
+							</section>
+						</div>
+						<div class="4u">
+							<section class="special">
+								<a class="image fit"><img src="images/misc.jpg" alt="Miscellaneous" /></a>
+								<h3>Miscellaneous</h3>
 							</section>
 						</div>
 					</div>
