Added before and after section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Equiknots</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="Equiknots Custom Sewing, Stitching, and Hemming" />
-		<meta name="keywords" content="equiknots, edmonton, canada, sylvia, custom, sewing, stitching, hemming, equine, therapy" />
+		<meta name="keywords" content="equiknots, edmonton, alberta, canada, sylvia, custom, sewing, stitching, hemming, equine, therapy" />
 		<meta name="format-detection" content="telephone=no" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
@@ -69,8 +69,8 @@
 		<!-- Two -->
 			<section id="two" class="wrapper style2">
 				<header class="major">
-					<h2>Our work</h2>
-					<p>We let our products speak for themselves. Here is a selection of our finished work.</p>
+					<h2>Our Scope</h2>
+					<p>We service a wide range of tailoring needs.</p>
 				</header>
 				<div class="container">
 					<div class="row">
@@ -90,6 +90,29 @@
 							<section class="special">
 								<a class="image fit"><img src="images/misc.jpg" alt="Miscellaneous" /></a>
 								<h3>Miscellaneous</h3>
+							</section>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section id="three" class="wrapper style1">
+				<header class="major">
+					<h2>Our work</h2>
+					<p>We let our products speak for themselves. Here is an example of our finished work:</p>
+				</header>
+				<div class="container">
+					<div class="row">
+						<div class="6u">
+							<section class="special">
+								<a class="image fit"><img src="images/before.jpg" alt="Before" /></a>
+								<h3>Before</h3>
+							</section>
+						</div>
+						<div class="6u">
+							<section class="special">
+								<a class="image fit"><img src="images/after.jpg" alt="After" /></a>
+								<h3>After</h3>
 							</section>
 						</div>
 					</div>
