--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>Equiknots</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="Equiknots Custom Sewing, Stitching, and Hemming" />
+		<meta name="description" content="Equiknots Custom Sewing, Stitching, Hemming, and Equine Therapy Based out of Edmonton, Alberta, Canada" />
 		<meta name="keywords" content="equiknots, edmonton, alberta, canada, sylvia, custom, sewing, stitching, hemming, equine, therapy" />
 		<meta name="format-detection" content="telephone=no" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
