--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
 					<div class="row">
 						<div class="6u">
 							<section class="special">
-								<a class="image fit"><img src="images/before.jpg" alt="Before" /></a>
+								<a class="image fit"><img src="images/before.JPG" alt="Before" /></a>
 								<h3>Before</h3>
 							</section>
 						</div>
 						<div class="6u">
 							<section class="special">
-								<a class="image fit"><img src="images/after.jpg" alt="After" /></a>
+								<a class="image fit"><img src="images/after.JPG" alt="After" /></a>
 								<h3>After</h3>
 							</section>
 						</div>
