Add svg logo and update text as requested

--- a/index.html
+++ b/index.html
@@ -5,138 +5,276 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<title>Equiknots</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="Equiknots Custom Sewing, Stitching, Hemming, and Equine Therapy Based out of Edmonton, Alberta, Canada" />
-		<meta name="keywords" content="equiknots, edmonton, alberta, canada, sylvia, custom, sewing, stitching, hemming, equine, therapy" />
-		<meta name="format-detection" content="telephone=no" />
-		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-layers.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-xlarge.css" />
-		</noscript>
-	</head>
-	<body id="top">
-		<!-- Banner -->
-			<section id="banner">
-				<div class="inner">
-					<h2>Equiknots</h2>
-					<p>Custom Sewing, Stitching, and Hemming</a></p>
-					<ul class="actions">
-						<li><a href="#contact" class="button big special">Contact Us</a></li>
-					</ul>
-				</div>
-			</section>
 
-		<!-- One -->
-			<section id="one" class="wrapper style1">
-				<header class="major">
-					<h2>Handmade Quality and Craftsmanship</h2>
-				</header>
-				<div class="container">
-					<div class="row">
-						<div class="4u">
-							<section class="special box">
-								<i class="icon fa-shield major"></i>
-								<h3>Quality Materials</h3>
-								<p>Every order is fabricated with high quality materials.</p>
-							</section>
-						</div>
-						<div class="4u">
-							<section class="special box">
-								<i class="icon fa-wrench major"></i>
-								<h3>Durability</h3>
-								<p>Repairs and fixes that last.</p>
-							</section>
-						</div>
-						<div class="4u">
-							<section class="special box">
-								<i class="icon fa-money major"></i>
-								<h3>Competitive Pricing</h3>
-								<p>Priced to offer the best deal.</p>
-							</section>
-						</div>
-					</div>
-				</div>
-			</section>
-			
-		<!-- Two -->
-			<section id="two" class="wrapper style2">
-				<header class="major">
-					<h2>Our Scope</h2>
-					<p>We service a wide range of tailoring needs.</p>
-				</header>
-				<div class="container">
-					<div class="row">
-						<div class="4u">
-							<section class="special">
-								<a class="image fit"><img src="images/industrial.jpg" alt="Industrial" /></a>
-								<h3>Industrial</h3>
-							</section>
-						</div>
-						<div class="4u">
-							<section class="special">
-								<a class="image fit"><img src="images/equine.jpg" alt="Equine" /></a>
-								<h3>Equine</h3>
-							</section>
-						</div>
-						<div class="4u">
-							<section class="special">
-								<a class="image fit"><img src="images/misc.jpg" alt="Miscellaneous" /></a>
-								<h3>Miscellaneous</h3>
-							</section>
-						</div>
-					</div>
-				</div>
-			</section>
+<head>
+	<title>Equiknots</title>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="description"
+		content="Equiknots Custom Sewing, Stitching, Hemming, and Equine Therapy Based out of Edmonton, Alberta, Canada" />
+	<meta name="keywords"
+		content="equiknots, edmonton, alberta, canada, sylvia, custom, sewing, stitching, hemming, equine, therapy" />
+	<meta name="format-detection" content="telephone=no" />
+	<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
+	<script src="js/jquery.min.js"></script>
+	<script src="js/skel.min.js"></script>
+	<script src="js/skel-layers.min.js"></script>
+	<script src="js/init.js"></script>
+	<noscript>
+		<link rel="stylesheet" href="css/skel.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/style-xlarge.css" />
+	</noscript>
+</head>
 
-			<section id="three" class="wrapper style1">
-				<header class="major">
-					<h2>Our work</h2>
-					<p>We let our products speak for themselves. Here is an example of our finished work:</p>
-				</header>
-				<div class="container">
-					<div class="row">
-						<div class="6u">
-							<section class="special">
-								<a class="image fit"><img src="images/before.JPG" alt="Before" /></a>
-								<h3>Before</h3>
-							</section>
-						</div>
-						<div class="6u">
-							<section class="special">
-								<a class="image fit"><img src="images/after.JPG" alt="After" /></a>
-								<h3>After</h3>
-							</section>
-						</div>
-					</div>
-				</div>
-			</section>
-			
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="container">
-					<div id="contact" style="text-align: center;">
-						<h2>Contact Us</h2>
-						<p>For inquiries, quotes, and general questions please contact us via email or phone.</p>
-						<ul class="icons">
-							<li><a href="mailto:sylvia.church@telus.net" class="icon fa-envelope-o"><span> sylvia.church@telus.net </span></a></li>
-							<li><a href="tel:17809406227" class="icon fa-phone"><span> 1-780-940-6227 </span></a></li>
-						</ul>
-					</div>
-					<ul class="copyright">
-						<li>&copy; Equiknots. All rights reserved.</li>
-						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-						<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
-					</ul>
-				</div>
-			</footer>
+<body id="top">
+	<!-- Banner -->
+	<section id="banner">
+		<div class="inner">
+			<img src="images/logo.svg" height="200" alt="Equiknots" />
+			<p>Custom Sewing, Stitching, and Hemming</p>
+			<ul class="actions">
+				<li><a href="#contact" class="button big special">Contact Us</a></li>
+			</ul>
+		</div>
+	</section>
 
-	</body>
+	<!-- One -->
+	<section id="one" class="wrapper style1">
+		<header class="major">
+			<h2>Handmade Quality and Craftsmanship</h2>
+		</header>
+		<div class="container">
+			<div class="row">
+				<div class="4u">
+					<section class="special box">
+						<i class="icon fa-shield major"></i>
+						<h3>Quality Materials</h3>
+						<p>Every order is fabricated with high quality materials.</p>
+					</section>
+				</div>
+				<div class="4u">
+					<section class="special box">
+						<i class="icon fa-wrench major"></i>
+						<h3>Durability</h3>
+						<p>Repairs and fixes that last.</p>
+					</section>
+				</div>
+				<div class="4u">
+					<section class="special box">
+						<i class="icon fa-money major"></i>
+						<h3>Competitive Pricing</h3>
+						<p>Priced to offer the best deal.</p>
+					</section>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Two -->
+	<section id="two" class="wrapper style2">
+		<header class="major">
+			<h2>Our Scope</h2>
+			<p>We service a wide range of tailoring needs.</p>
+		</header>
+		<div class="container">
+			<div class="row">
+				<div class="4u">
+					<section class="special">
+						<a class="image fit"><img src="images/industrial.jpg" alt="Industrial" /></a>
+						<h3>Industrial</h3>
+					</section>
+				</div>
+				<div class="4u">
+					<section class="special">
+						<a class="image fit"><img src="images/equine.jpg" alt="Equine" /></a>
+						<h3>Equine</h3>
+					</section>
+				</div>
+				<div class="4u">
+					<section class="special">
+						<a class="image fit"><img src="images/misc.jpg" alt="Miscellaneous" /></a>
+						<h3>Miscellaneous</h3>
+					</section>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="three" class="wrapper style1">
+		<header class="major">
+			<h2>The Washing Process</h2>
+		</header>
+		<div class="container">
+			<div class="row">
+				<div class="12u">
+					<p>Your blanket is first soaked in a warm water tub to loosen the dirt;
+						then it is washed with a phosphate-free and scent-free soap for a
+						1:45 hr cycle in a washing machine. Sodium bicarbonate is added to
+						the wash to help remove that “horsey” smell. When your blanket is
+						finished being washed, it is hung to dry. It usually takes between 12
+						and 18 hours to fully dry the blanket.
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="four" class="wrapper style1">
+		<header class="major">
+			<h2>Wash and Repair Pricing</h2>
+		</header>
+		<div class="container">
+			<div class="row">
+				<div class="6u">
+					<h3>Wash</h3>
+					<dl>
+						<dt>Fly and Rain Sheets</dt>
+						<dd>$15</dd>
+						<dt>Winter Blankets up to 300gm</dt>
+						<dd>$20</dd>
+						<dt>Heavy Winter Blankets 300+ gms</dt>
+						<dd>$25</dd>
+						<dt>Hoods</dt>
+						<dd>$10</dd>
+						<dt>Saddle Pads</dt>
+						<dd>$10</dd>
+					</dl>
+				</div>
+				<div class="6u">
+					<h3>Repairs</h3>
+					<p>Rips are patched and price is dependent on the size and time required to repair.
+						If fill is missing from the rip it is replaced with a similar weight fill.
+						Missing hardware is replaced at the cost of the hardware plus time to install.
+						Repair time is based on $20/hr. with a minimum time charge of 15 min. ($5.00)
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="five" class="wrapper style2">
+		<header class="major">
+			<h2>Maintenance Tips</h2>
+			<p>You have invested a lot of money buying your horse blankets.
+				Here are some tips on making that investment last longer:</p>
+		</header>
+		<div class="container">
+			<div class="row">
+				<div class="12u">
+					<ol>
+						<li>
+							<h3>Clean your blanket regularly</h3>
+							<p>Your horse will roll, or lay down with the blanket on. The sand and dirt from the ground
+								will get infused into the fabric of your blanket. That dirt can break down the weave of
+								the fabric and weaken the integrity of the blanket – making it rip more easily.
+								Alternatively
+								over-washing can
+								damage the waterproof material. If you suspect that your blanket is not as waterproof as
+								it used
+								to be there are marine-grade products that can be spayed to make it more water-proof but
+								be
+								sure to have it sprayed on a clean and dry blanket.</p>
+						</li>
+						<li>
+							<h3>Don’t put wet/damp blankets in plastic bags</h3>
+							<p>Wet fabric, especially if infused with manure and dirt will mold. Not only does mold eat
+								away at
+								the fabric but it is almost impossible to remove that mold without ruining the integrity
+								of the
+								blanket fabric.</p>
+						</li>
+						<li>
+							<h3>If there is a small rip get it fixed before it gets larger</h3>
+							<p>Horses being what they are will manage to find the only nail sticking out on the paddock
+								rail or
+								their playful paddock mates want to play a game of bite the blanket. A small rip can
+								quickly turn
+								into a large rip, or worse, a piece of fabric flapping in the breeze and freaking out
+								your horse.
+								Getting those smaller rips repaired in a timely fashion can prevent damage too severe to
+								repair.</p>
+						</li>
+						<li>
+							<h3>Make Sure your blanket fits properly</h3>
+							<p>Properly fitting your horse’s blanket is extremely important. In addition to making sure
+								all your
+								straps are fitted correctly, remember that all blanket manufacturers design their
+								blankets a little
+								differently. Some run big, some narrower, etc. An ill-fitted blanket will restrict your
+								horse’s
+								movement. If you buy a blanket that is too big it will constantly want to slide back and
+								twist. An
+								unhappy blanketed horse will soon find a way to remove that blanket – without your
+								assistance.
+								It is worth your time to find a blanket brand that has designed their blankets to more
+								suitably fit
+								your horse. Consider criss-crossing leg straps and having belly straps snug-not tight
+								(one flat
+								hand between the strap and the horse’s belly).</p>
+						</li>
+						<li>
+							<h3>Timing is everything</h3>
+							<p>I can’t tell you how many times clients have pulled out their blankets the
+								day they need it only to realize that the blanket is dirty or in need of repair. A panic
+								ensues as
+								weather conditions make washing/repair a crisis. Consider reviewing the condition of
+								your
+								blanket at the end of the season and get it cleaned/repaired before putting it away.
+								That way
+								when you need that winter blanket the day before it turns wintery, it will be ready for
+								whatever
+								mother nature plans.</p>
+						</li>
+
+					</ol>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="six" class="wrapper style1">
+		<header class="major">
+			<h2>Our work</h2>
+			<p>We let our products speak for themselves. Here is an example of our finished work:</p>
+		</header>
+		<div class="container">
+			<div class="row">
+				<div class="6u">
+					<section class="special">
+						<a class="image fit"><img src="images/before.JPG" alt="Before" /></a>
+						<h3>Before</h3>
+					</section>
+				</div>
+				<div class="6u">
+					<section class="special">
+						<a class="image fit"><img src="images/after.JPG" alt="After" /></a>
+						<h3>After</h3>
+					</section>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="container">
+			<div id="contact" style="text-align: center;">
+				<h2>Contact Us</h2>
+				<p>For inquiries, quotes, and general questions please contact us via email or phone.</p>
+				<ul class="icons">
+					<li><a href="mailto:sylvia.church@telus.net" class="icon fa-envelope-o"><span>
+								sylvia.church@telus.net </span></a></li>
+					<li><a href="tel:17809406227" class="icon fa-phone"><span> 1-780-940-6227 </span></a></li>
+				</ul>
+			</div>
+			<ul class="copyright">
+				<li>&copy; Equiknots. All rights reserved.</li>
+				<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
+				<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
+			</ul>
+		</div>
+	</footer>
+
+</body>
+
 </html>
