--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<!-- Banner -->
 	<section id="banner">
 		<div class="inner">
-			<img src="images/logo.svg" height="200" alt="Equiknots" />
+			<img src="images/logo.svg" width="200" alt="Equiknots" />
 			<p>Custom Sewing, Stitching, and Hemming</p>
 			<ul class="actions">
 				<li><a href="#contact" class="button big special">Contact Us</a></li>
